Bug 105697 - LO53: The experimental feature Screenshot command is not localizable
Summary: LO53: The experimental feature Screenshot command is not localizable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.2 rc
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-02 12:05 UTC by Martin Srebotnjak
Modified: 2017-02-03 17:31 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
The Screenshot command in context menu (9.84 KB, image/png)
2017-02-02 12:07 UTC, Martin Srebotnjak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2017-02-02 12:05:30 UTC
Description:
The experimental feature in 5.3, enabling making screenshots of UI, has "Screenshot" command that is not localizable. Other commands/texts by this features seem to be localizable.

Steps to Reproduce:
1. Enable experimental features of LO in a fully localized LO53 (like Slovenian)
2. Put your mouse pointer near the OK button in a dialog and right-click
3. A context menu opens, including the "Screenshot" command, that is not localized

Actual Results:  
"Screenshot" command, see attached screenshot.

Expected Results:
"Slikaj zaslon" command (or whatever the l10n)


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 1 Martin Srebotnjak 2017-02-02 12:07:19 UTC
Created attachment 130847 [details]
The Screenshot command in context menu
Comment 2 Andras Timar 2017-02-02 12:47:19 UTC
commit f9238c34f090adcc6a9da71349b776e7416ade91
Author: Armin Le Grand <Armin.Le.Grand@cib.de>
Date:   Thu Aug 25 16:50:41 2016 +0200

    screenshot: develop interactive screenshot dialog
Comment 3 Samuel Mehrbrodt (allotropia) 2017-02-02 17:40:55 UTC
Oops I only see now after creating a patch for this that Mkara assigned this to himself - did you already start working on it? If so, I'll abandon my patch.

If not, here it is: https://gerrit.libreoffice.org/#/c/33844/ .
Comment 4 Muhammet Kara 2017-02-02 18:56:42 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #3)
> Oops I only see now after creating a patch for this that Mkara assigned this
> to himself - did you already start working on it? If so, I'll abandon my
> patch.
> 
> If not, here it is: https://gerrit.libreoffice.org/#/c/33844/ .

I applied a patch locally, and started a build (first build), and left my pc for the night. I don't know if it succeeded or not. You may go forward, and merge your patch if it succeeds; no problem on my side.
Comment 5 Commit Notification 2017-02-03 15:13:21 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d7c48309e67c097ea4fe1045640401209b316c48

tdf#105697: Make the Screenshot command localizable

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.