tdf#105697 Make 'Screenshot' context menu localizable

Change-Id: I2e0a5d3cb3e04d16532c44d9fb9da6e4ed5cdb27